@@ -22,6 +22,7 @@ Version history:
 - cleaned up internals (like Max/MSP typedefs)
 - fixed coexistence of message and signal objects in Max/MSP object libraries
 - fixes for pthreads version 2
+- deprecated FLEXT_GLOBALNEW in favor of FLEXT_USECMEM (either global new/delete operators or C library memory allocation)
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
